--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=Journal
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://<db_username>:<db_password>@cluster0.qwerty.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
