--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=Journal
-spring.data.mongodb.uri=mongodb+srv://<db_username>:<db_password>@cluster0.qwerty.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=journaldb
-spring.data.mongodb.auto-index-creation=true
+#spring.application.name=Journal
+#spring.data.mongodb.uri=mongodb+srv://ajay1234:ajay1234@cluster0.cimnx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#spring.data.mongodb.database=journaldb
+#spring.data.mongodb.auto-index-creation=true
+#spring.main.allow-circular-references=true
