--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,3 @@
 spring:
-  application:
-    name: Journal
-  data:
-    mongodb:
-      uri: mongodb+srv://ajay1234:ajay1234@cluster0.cimnx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-      database: journaldb
-      auto-index-creation: true
-  main:
-    allow-circular-references: true
-
-server:
-  port: 8080
-  servlet:
-    context-path: /journals
+  profiles:
+    active: prod
