Logger slf4j added and debug log level added

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -13,3 +13,10 @@ server:
   port: 8081
   servlet:
     context-path: /journals
+
+
+logging:
+  level:
+    com:
+      apandit:
+        journalApp: DEBUG
